web-app/templates/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: web
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      service: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: web
    spec:
      containers:
        - name: web
          image: vinduzyatnik/k8s-sre-task_web
          args:
            - gunicorn
            - hello_django.wsgi:application
            - --bind
            - 0.0.0.0:8000
          ports:
            - containerPort: 8000
          resources: {}
          volumeMounts:
            - mountPath: /home/app/web/staticfiles
              name: static-volume
            - mountPath: /home/app/web/mediafiles
              name: media-volume
      restartPolicy: Always
      volumes:
        - name: static-volume
          persistentVolumeClaim:
            claimName: static-volume
        - name: media-volume
          persistentVolumeClaim:
            claimName: media-volume
