web-app/templates/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: web
  name: web
spec:
  ports:
    - name: "1338"
      port: 1338
      targetPort: 8000
    - name: "8000"
      port: 8000
  selector:
    service: web
